<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75sp"
        android:background="#00BCD4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comprobante"
            android:id="@+id/textViewTituloCliente"
            android:paddingLeft="10sp"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:paddingTop="10sp" />
    </LinearLayout>
    <TableRow>
        <TextView android:text="@string/num_comprobante"/>
        <EditText
            android:id="@+id/editNumComprobante"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_comprobante" />
        <EditText
            android:id="@+id/editIdComprobante"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/fecha_comprobante" />
        <EditText
            android:id="@+id/editFechaComprobante"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/monto" />
        <EditText
            android:id="@+id/editMonto"
            android:inputType="numberDecimal"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/vendedor" />
        <EditText
            android:id="@+id/editVendedor"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_tipo_comprobante" />
        <EditText
            android:id="@+id/editTipoComprobanteFK"
            android:inputType="number"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarComprobante"
            android:text="@string/insertar_registro"
            android:layout_marginTop="10dp"
            style="@style/btStyle"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="limpiar"
            android:layout_marginTop="40dp"
            style="@style/btStyle"/>
    </TableRow>

</TableLayout>
