<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="proyecto1.pdm.fia.ues.sv.valoracionestablecimientos.DepartamentoInsertarActivity">

</RelativeLayout>-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75sp"
        android:background="#00BCD4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departamento"
            android:paddingLeft="10sp"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:paddingTop="10sp" />
    </LinearLayout>

    <TableRow>
        <TextView android:text="@string/IdDepartamento"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/editIdDepartamento"
            android:inputType="number"
            android:maxLength="7"
            android:layout_marginTop="20dp"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/NombreDepartamento" />
        <EditText
            android:id="@+id/editNombreDepartamento"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/Zona" />
        <EditText
            android:id="@+id/editZona"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
   <!-- <TableRow>
        <TextView android:text="@string/sexo" />
        <EditText
            android:id="@+id/editSexo"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow> -->
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarDepartamento"
            android:text="@string/insertar"
            android:layout_marginTop="20dp"
            style="@style/btStyle"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_marginTop="60dp"
            style="@style/btStyle"/>
    </TableRow>
</TableLayout>
