<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="proyecto1.pdm.fia.ues.sv.valoracionestablecimientos.MunicipioInsertarActivity">

</RelativeLayout> -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="75sp"
        android:background="#00BCD4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/municipio"
            android:paddingLeft="50sp"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:paddingTop="10sp" />
    </LinearLayout>
    <TableRow>
        <TextView android:text="@string/IdMunicipio"/>
        <EditText
            android:id="@+id/editIdMunicipio"
            android:inputType="number"
            android:maxLength="7" /><!--7 para carnet pero puede variar para municipio, tambien cambie de text a number-->
    </TableRow>
    <TableRow>
        <TextView android:text="@string/IdDepartamento" />
        <EditText
            android:id="@+id/editIdDepartamento"
            android:inputType="number"
            android:maxLength="6" /><!--7 para codmateria pero puede variar para departamento -->
    </TableRow>
    <TableRow>
        <TextView android:text="@string/NombreMunicipio" />
        <EditText
            android:id="@+id/editNombreMunicipio"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <!--<TableRow>
        <TextView android:text="@string/notafinal" />
        <EditText
            android:id="@+id/editNotafinal"
            android:inputType="text"
            android:maxLength="4" />
    </TableRow> -->
    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="insertarMunicipio"
            android:text="@string/insertar"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            style="@style/btStyle"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_marginTop="60dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            style="@style/btStyle"/>
    </TableRow>
</TableLayout>
