<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_tipo_comprobante" />
        <EditText
            android:id="@+id/editIdTipoComprobanteA"
            android:inputType="number"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tipo_comprobante" />
        <EditText
            android:id="@+id/editTipoComprobanteA"
            android:inputType="text"
            android:maxLength="15" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarTipoComprobante"
            android:text="@string/actualizar_registro" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="limpiar" />
    </TableRow>
</TableLayout>